[package]
name = "edelcrantz"
description = "async peer-to-peer rpc-and-messaging service"
version = "0.6.1"
authors = ["Graydon Hoare <graydon@pobox.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["rpc", "async", "service", "io"]
repository = "http://github.com/graydon/edelcrantz"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
postcard = {version="0.5.1", features = ["alloc"]}
byteorder_async = {version="1.2.0", features=["futures_async"] }
futures = "0.3.5"
thiserror = "1.0"
tracing = "0.1.22"
tracing-futures = "0.2.4"

[dev-dependencies]
sluice = "0.5.2"
duplexify = "1.2.2"
async-std = "1.7.0"
tracing-subscriber = {version="0.2.15", features = ["chrono", "env-filter", "fmt"]}
